fixing alignment

--- a/src/app/display/monster-cell.component.scss
+++ b/src/app/display/monster-cell.component.scss
@@ -7,27 +7,27 @@
 }
 
 .monster-number {
-  background-image: url("/assets/thorns_badge.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-
-  // TODO(mdierker): Figure out why these are different.
-  background-size: 64px;
-  height: 70px;
-
-  display: flex;
-  justify-content: center;
-  span {
-    align-self: center;
-  }
-
-  margin-right: 5px;
-
-  font-size: 50pt;
-  font-weight: bold;
-  text-align: center;
+  align-items: center;
+  // background-image: url("/assets/thorns_badge.png");
+  // background-position: center center;
+  // background-repeat: no-repeat;
+  // TODO(mdierker): Figure out why background-size and height are different.
+  // background-size: 64px;
+  border: 2px red solid;
   color: white;
+  display: flex;
+  font-size: 55pt;
+  font-weight: bold;
+  height: 70px;
+  justify-content: center;
+  line-height: 70px;
+  margin-right: 5px;
+  text-align: center;
   width: 70px;
+
+  span {
+    margin-top: -5px;
+  }
 }
 
 .monster-name {
@@ -49,17 +49,17 @@
 }
 
 .monster-status {
-    display: flex;
-    margin-top: 3px;
+  display: flex;
+  margin-top: 3px;
 }
 
 .monster-status-icon {
-    width: 24px;
+  width: 24px;
 }
 
 .monster-status-text {
-    align-self:center;
-    margin-left: 5px;
+  align-self: center;
+  margin-left: 5px;
 }
 
 progressbar {
